# leafora

./: .gitignore  README.md  SECURITY.md
apps/admin/: index.html
apps/admin/assets/: admin.css  admin.js
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: evidence.py  health.py  projects.py  supports.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 0001_initial_schema.py  0002_project_catalog_schema.py
apps/api/app/models/: __init__.py  evidence.py  project.py  project_milestone.py  project_tier.py  support.py
apps/api/app/schemas/: __init__.py  evidence.py  project.py  support.py
apps/api/app/services/: __init__.py  sui_rpc.py
apps/api/tests/: test_health.py
apps/capture/: README.md
apps/web/: README.md  index.html
apps/web/assets/css/: styles.css
apps/web/assets/js/: app.js  config.js  projects.js  sui-devnet.js
blockchain/sui/leafora/: Move.toml  README.md
blockchain/sui/leafora/sources/: leafora.move
docs/architecture/: backend.md  contract-design.md  overview.md  target.md  wallet-integration.md
docs/operations/: backend-deployment.md  deployment.md  devnet-runbook.md
docs/product/: brand.md  scope.md
docs/security/: supply-chain.md  vendor-manifest.md
infra/deploy/: ubuntu-setup.sh  update-server.sh
infra/nginx/: leafora-panel.conf.example  leafora.conf.example
infra/systemd/: leafora-api.service
