[project]
name = "leafora-api"
version = "0.1.0"
description = "Leafora backend API for ecological projects, evidence registry, and Sui indexing."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.10,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.8,<1.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

